# polybot

./: .env.local  .gitignore  Cargo.toml  README.md  plan.md
.github/agents/: rust-beast-mode.agent.md
.github/workflows/: ci.yml
deploy/: .env.example  install.sh  polybot.service
src/: auth.rs  config.rs  geoblock.rs  lib.rs  main.rs
src/intelligence/: llm.rs  mod.rs  signal.rs
src/market/: book.rs  discovery.rs  mod.rs  ws.rs
src/ops/: fill_detect.rs  metrics.rs  mod.rs  nav.rs  paper.rs  rewards.rs
src/order/: heartbeat.rs  mod.rs  pipeline.rs  router.rs
src/risk/: guardrails.rs  mod.rs  position.rs  rate_limit.rs
src/strategy/: decay.rs  mean_revert.rs  mod.rs  rebate_mm.rs  reward.rs  scalper.rs
tests/: integration.rs
